--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 <script>
         const imageContainer = document.getElementById('imageContainer');
-        const numImages = 100; // Total number of images
-        const imagesToShow = 4; // Number of images to show simultaneously
+        const numImages = 104; // Total number of images
+        const imagesToShow = 6; // Number of images to show simultaneously
         const imagePaths = [];
         for (let i = 1; i <= numImages; i++) {
-            imagePaths.push(`images/image${i}.jpg`); // Replace with your image paths
+            imagePaths.push(`images/nana${i}.jpg`); // Replace with your image paths
         }
 
         function createFloatingImage(imagePath) {
