--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         const imagesToShow = 6; // Number of images to show simultaneously
         const imagePaths = [];
         for (let i = 1; i <= numImages; i++) {
-            imagePaths.push(`images/nana${i}.jpg`); // Replace with your image paths
+            imagePaths.push(`images/nana${i}.png`); // Replace with your image paths
         }
 
         function createFloatingImage(imagePath) {
